--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Pedram Emrouznejad (https://github.com/pemrouz)",
   "license": "pemrouz.mit-license.org",
   "devDependencies": {
-    "browserenv": "0.0.4",
+    "browserenv": "*",
     "chai": "^2.3.0",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
